--- a/index.html
+++ b/index.html
@@ -6,9 +6,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./css/style.css">
     <title>Panda Commerce</title>
 </head>
-<body>
-    <h1>Panda commerce show is ready</h1>
+<body class="container mx-auto">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">
+                <img src="./images/logo.png" alt="">
+              </a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Features</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled">Disabled</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
+    </header>
+
+    <!-- carousel start  -->
+
+    <section id="slider" class=" mt-5  ">
+        <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+            <div class="carousel-inner">
+              <div class="carousel-item active panda-bg-info rounded">
+                <div class="row">
+                    <div class=" col-md-8 my-auto px-5">
+                        <h1>Mega LCD TV For Sports</h1>
+                        <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                        <h1 class="price">$1200</h1>
+                        <button class="panda-btn-buy-now">Buy Now</button>     
+                    </div>  
+                    <div class="col-md-4">   
+                        <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item active panda-bg-info rounded">
+                <div class="row">
+                    <div class=" col-md-8 my-auto px-5">
+                        <h1>X-Box for your living room</h1>
+                        <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                        <h1 class="price">$600</h1>
+                        <button class="panda-btn-buy-now">Buy Now</button>     
+                    </div>  
+                    <div class="col-md-4">   
+                        <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item active panda-bg-info rounded">
+                <div class="row">
+                    <div class=" col-md-8 my-auto px-5">
+                        <h1>Cool Dude Headphone</h1>
+                        <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
+                        <h1 class="price">$520</h1>
+                        <button class="panda-btn-buy-now">Buy Now</button>     
+                    </div>  
+                    <div class="col-md-4 p-2">   
+                        <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+             
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </section>
 </body>
 </html>
