website category section is ready

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div>
                 </div>
               </div>
-              <div class="carousel-item active panda-bg-info rounded">
+              <div class="carousel-item  panda-bg-info rounded">
                 <div class="row">
                     <div class=" col-md-8 my-auto px-5">
                         <h1>X-Box for your living room</h1>
@@ -70,7 +70,7 @@
                     </div>
                 </div>
               </div>
-              <div class="carousel-item active panda-bg-info rounded">
+              <div class="carousel-item  panda-bg-info rounded">
                 <div class="row">
                     <div class=" col-md-8 my-auto px-5">
                         <h1>Cool Dude Headphone</h1>
@@ -95,5 +95,30 @@
             </button>
           </div>
     </section>
+
+    <section id="category" class="mt-5">
+        <div class="row">
+            <div class="col-md-4 ">
+               <div class="d-flex justify-content-between align-items-center cat1 rounded">
+                <h1 class="fs-1 text-light">Watch</h1> 
+                <img src="./images/categories/watch.png" alt="">
+               </div>
+            </div>
+            <div class="col-md-4 ">
+                <div class="d-flex justify-content-between align-items-center cat2 rounded">
+                    <h1 class="fs-1 text-light">Bag</h1> 
+                    <img src="./images/categories/bag.png" alt="">
+                </div>
+            </div>
+            <div class="col-md-4 ">
+               <div class="d-flex justify-content-between align-items-center cat3 rounded">
+                <h1 class="fs-1 text-light">Show</h1> 
+                <img src="./images/categories/shoes.png" alt="">
+               </div>
+            </div>
+            
+        </div>
+    </section>
+
 </body>
 </html>
