my code is organize

--- a/index.html
+++ b/index.html
@@ -96,29 +96,37 @@
           </div>
     </section>
 
+    <!-- categories section  -->
+
     <section id="category" class="mt-5">
         <div class="row">
             <div class="col-md-4 ">
-               <div class="d-flex justify-content-between align-items-center cat1 rounded">
-                <h1 class="fs-1 text-light">Watch</h1> 
+               <div class="d-flex justify-content-around align-items-center cat1 rounded">
+                <h1 class=" text-light">Watch</h1> 
                 <img src="./images/categories/watch.png" alt="">
                </div>
             </div>
             <div class="col-md-4 ">
-                <div class="d-flex justify-content-between align-items-center cat2 rounded">
-                    <h1 class="fs-1 text-light">Bag</h1> 
+                <div class="d-flex justify-content-around align-items-center cat2 rounded">
+                    <h1 class=" text-light">Bag</h1> 
                     <img src="./images/categories/bag.png" alt="">
                 </div>
             </div>
             <div class="col-md-4 ">
-               <div class="d-flex justify-content-between align-items-center cat3 rounded">
-                <h1 class="fs-1 text-light">Show</h1> 
+               <div class="d-flex justify-content-around align-items-center cat3 rounded">
+                <h1 class=" text-light">Show</h1> 
                 <img src="./images/categories/shoes.png" alt="">
                </div>
             </div>
             
         </div>
     </section>
-
+    <!-- backpack -->
+    <section id="backpack" class=" mt-5">
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="backpack-items">
+        
+      </div>
+    </section>
+    <script src="./app.js"></script>
 </body>
 </html>
