my show constainer is finished

--- a/index.html
+++ b/index.html
@@ -127,6 +127,13 @@
         
       </div>
     </section>
+
+    <!-- show container -->
+    <section id="backpack" class=" mt-5">
+      <div class="row row-cols-1 row-cols-md-3 g-4" id="show-items">
+          
+      </div>
+    </section>
     <script src="./app.js"></script>
 </body>
 </html>
