my website contact with gmail complite

--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
           
       </div>
     </section>
+
+    <section id="stay" class="panda-bg-info my-5 d-flex justify-content-center align-items-center">
+      <div>
+        <h1>LET'S STAY IN TOUCH</h1>
+        <p>Get updates on sales, specials and more</p>
+        <input type="email" class="form-control bold">
+        <button class="panda-btn-buy-now d-block">SUBMIT</button>
+      </div>
+    </section>
     <script src="./app.js"></script>
 </body>
 </html>
